--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "@egjs/hammerjs": "^2.0.17",
     "@react-navigation/native": "^6.0.0",
     "@react-navigation/stack": "^6.0.0",
+    "@tanstack/react-query": "^5.82.0",
     "@types/hammerjs": "^2.0.46",
     "expo": "~53.0.19",
     "expo-av": "^15.1.7",
