--- a/mobile/package.json
+++ b/mobile/package.json
@@ -26,13 +26,14 @@
     "expo-build-properties": "^0.14.8",
     "expo-status-bar": "~2.2.3",
     "hoist-non-react-statics": "^3.3.2",
-    "react": "19.1.0",
+    "react": "19.0.0",
     "react-freeze": "^1.0.4",
-    "react-native": "0.79.3",
-    "react-native-gesture-handler": "^2.27.1",
-    "react-native-reanimated": "^3.18.0",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.11.1"
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "^4.11.1",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@types/react": "~19.0.10",
