Assistant checkpoint: Fix Android API 34 resource conflicts
Assistant generated file changes:
- mobile/app.json: Force API 33 pour éviter les erreurs de ressources Android 14
- mobile/gradle.properties: Forcer l'utilisation exclusive d'Android API 33
- mobile/android/gradle.properties: Configuration Android spécifique pour forcer API 33

---

User prompt:

Running 'gradlew :app:assembleRelease --no-daemon -x checkReleaseAarMetadata' in /home/expo/workingdir/build/mobile/android
Downloading https://services.gradle.org/distributions/gradle-8.13-bin.zip
10%.
20%.
30%.
40%.
50%.
60%.
70
%.
80%.
90%.
100%
Welcome to Gradle 8.13!
Here are the highlights of this release:
 - Daemon JVM auto-provisioning
 - Enhancements for Scala plugin and JUnit testing
 - Improvements for build authors and plugin developers
For more details see https://docs.gradle.org/8.13/release-notes.html
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.13/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build
> Configure project :expo-gradle-plugin:expo-autolinking-plugin-shared
w: file:///home/expo/workingdir/build/mobile/node_modules/expo-modules-autolinking/android/expo-gradle-plugin/expo-autolinking-plugin-shared/build.gradle.kts:32:9: The expression is unused
> Task :gradle-plugin:settings-plugin:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :gradle-plugin:shared:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :expo-gradle-plugin:expo-autolinking-plugin-shared:checkKotlinGradlePluginConfigurationErrors
> Task :expo-gradle-plugin:expo-autolinking-settings-plugin:checkKotlinGradlePluginConfigurationErrors
> Task :gradle-plugin:settings-plugin:pluginDescriptors
> Task :expo-gradle-plugin:expo-autolinking-settings-plugin:pluginDescriptors
> Task :expo-gradle-plugin:expo-autolinking-settings-plugin:processResour

--- a/mobile/gradle.properties
+++ b/mobile/gradle.properties
@@ -53,3 +53,8 @@ android.disableAutomaticComponentCreation=true
 android.enableAapt2=false
 android.suppressUnsupportedCompileSdk=33
 android.suppressUnsupportedOptionWarnings=true
+
+# Force Android API 33 to avoid Android 14 resource conflicts
+android.compileSdkVersion=33
+android.buildToolsVersion=33.0.0
+android.useDeprecatedNdk=true
