Assistant checkpoint: Force Android API 33 and eliminate Android 14 resources
Assistant generated file changes:
- mobile/app.json: Forcer l'utilisation exclusive d'Android API 33
- mobile/gradle.properties: Configuration Gradle pour éliminer les ressources Android 14
- mobile/eas.json: Configuration EAS pour éviter les ressources Android 14

---

User prompt:

Running 'gradlew :app:assembleRelease --no-daemon -x checkReleaseAarMetadata' in /home/expo/workingdir/build/mobile/android
Downloading https://services.gradle.org/distributions/gradle-8.13-bin.zip
10%.
20%.
30%.
40%.
50%
60%.
70
%.
80%.
90%.
100%
Welcome to Gradle 8.13!
Here are the highlights of this release:
- Daemon JVM auto-provisioning
- Enhancements for Scala plugin and JUnit testing
- Improvements for build authors and plugin developers
For more details see https://docs.gradle.org/8.13/release-notes.html
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.13/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build
> Configure project :expo-gradle-plugin:expo-autolinking-plugin-shared
w: file:///home/expo/workingdir/build/mobile/node_modules/expo-modules-autolinking/android/expo-gradle-plugin/expo-autolinking-plugin-shared/build.gradle.kts:32:9: The expression is unused
> Task :gradle-plugin:settings-plugin:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :gradle-plugin:shared:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :expo-gradle-plugin:expo-autolinking-plugin-shared:checkKotlinGradlePluginConfigurationErrors
> Task :expo-gradle-plugin:expo-autolinking-settings-plugin:checkKotlinGradlePluginConfigurationErrors
> Task :gradle-plugin:settings-plugin:pluginDescriptors
> Task :expo-gradle-plugin:expo-autolinking-settings-plugin:pluginDescriptors
> Task :expo-gradle-plugin:expo-autolinking-settings-plugin:processResour

--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -28,7 +28,12 @@
     "production": {
       "android": {
         "buildType": "apk",
-        "gradleCommand": ":app:assembleRelease"
+        "gradleCommand": ":app:assembleRelease",
+        "env": {
+          "ANDROID_COMPILE_SDK": "33",
+          "ANDROID_BUILD_TOOLS": "33.0.0",
+          "EXPO_SKIP_MANIFEST_VALIDATION": "1"
+        }
       },
       "env": {
         "NODE_ENV": "production"
