--- a/mobile/gradle.properties
+++ b/mobile/gradle.properties
@@ -58,3 +58,17 @@ android.suppressUnsupportedOptionWarnings=true
 android.compileSdkVersion=33
 android.buildToolsVersion=33.0.0
 android.useDeprecatedNdk=true
+
+# Configuration Android pour ATOMIC FLIX
+# Force l'utilisation d'Android 13 (API 33) exclusivement
+
+android.compileSdkVersion=33
+android.buildToolsVersion=33.0.0
+
+# Désactive les ressources Android 14+ qui causent des conflits
+android.disableResourceValidation=true
+android.enableR8.fullMode=false
+
+# Force l'exclusion des ressources v34+ (Android 14)
+android.useAapt2=true
+android.aaptOptions.ignoreAssetsPattern="values-v34/*:values-v35/*"
