--- a/mobile/app.json
+++ b/mobile/app.json
@@ -46,6 +46,7 @@
             "minSdkVersion": 24,
             "targetSdkVersion": 33,
             "compileSdkVersion": 33,
+            "buildToolsVersion": "33.0.0",
             "packagingOptions": {
               "pickFirst": [
                 "lib/x86/libc++_shared.so",
