Assistant checkpoint: Retirer expo-av, configurer API 21, rebuild APK
Assistant generated file changes:
- mobile/package.json: Retirer expo-av pour compatibilité Android 5.0+
- mobile/src/screens/AnimePlayerScreen.tsx: Retirer imports expo-av non utilisés
- mobile/app.json: Confirmer minSdkVersion 21 pour Android 5.0+
- mobile/eas.json: Mettre à jour configuration EAS pour Android API 21

---

User prompt:

Running 'gradlew :app:assembleRelease --no-daemon -x checkReleaseAarMetadata' in /home/expo/workingdir/build/mobile/android
Downloading https://services.gradle.org/distributions/gradle-8.13-bin.zip
10%
20%.
30%.
40%.
50%.
60%.
70%
80%.
90%.
100%
Welcome to Gradle 8.13!
Here are the highlights of this release:
 - Daemon JVM auto-provisioning
 - Enhancements for Scala plugin and JUnit testing
 - Improvements for build authors and plugin developers
For more details see https://docs.gradle.org/8.13/release-notes.html
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.13/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build
> Configure project :expo-gradle-plugin:expo-autolinking-plugin-shared
w: file:///home/expo/workingdir/build/mobile/node_modules/expo-modules-autolinking/android/expo-gradle-plugin/expo-autolinking-plugin-shared/build.gradle.kts:32:9: The expression is unused
> Task :gradle-plugin:settings-plugin:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :gradle-plugin:shared:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :expo-gradle-plugin:expo-autolinking-settings-plugin:checkKotlinGradlePluginConfigurationErrors
> Task :expo-gradle-plugin:expo-autolinking-plugin-shared:checkKotlinGradlePluginConfigurationErrors
> Task :gradle-plugin:settings-plugin:pluginDescriptors
> Task :expo-gradle-plugin:expo-autolinking-settings-plugin:pluginDescriptors
> Task :gradle-plugin:se

--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -34,8 +34,7 @@
           "ANDROID_BUILD_TOOLS": "34.0.0",
           "ANDROID_MIN_SDK": "21",
           "ANDROID_TARGET_SDK": "34",
-          "EXPO_USE_HERMES": "false",
-          "EXPO_UNIVERSAL_ANDROID": "true"
+          "EXPO_USE_HERMES": "false"
         }
       },
       "env": {
