Assistant checkpoint: Ajuster compatibilité Android 7.0+ pour résoudre erreurs CMake
Assistant generated file changes:
- mobile/app.json: Revenir à minSdkVersion 24 pour compatibilité native
- mobile/gradle.properties: Ajuster les configurations Gradle pour éviter les erreurs CMake
- mobile/android-compatibility.md: Mettre à jour la documentation de compatibilité

---

User prompt:

Running 'gradlew :app:assembleRelease --no-daemon -x checkReleaseAarMetadata' in /home/expo/workingdir/build/mobile/android
Downloading https://services.gradle.org/distributions/gradle-8.13-bin.zip
10%.
20%.
30%.
40%.
50%.
60%.
70
%.
80%.
90%.
100%
Welcome to Gradle 8.13!
Here are the highlights of this release:
 - Daemon JVM auto-provisioning
- Enhancements for Scala plugin and JUnit testing
- Improvements for build authors and plugin developers
For more details see https://docs.gradle.org/8.13/release-notes.html
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.13/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build
> Configure project :expo-gradle-plugin:expo-autolinking-plugin-shared
w: file:///home/expo/workingdir/build/mobile/node_modules/expo-modules-autolinking/android/expo-gradle-plugin/expo-autolinking-plugin-shared/build.gradle.kts:32:9: The expression is unused
> Task :gradle-plugin:shared:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :gradle-plugin:settings-plugin:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :expo-gradle-plugin:expo-autolinking-settings-plugin:checkKotlinGradlePluginConfigurationErrors
> Task :expo-gradle-plugin:expo-autolinking-plugin-shared:checkKotlinGradlePluginConfigurationErrors
> Task :gradle-plugin:settings-plugin:pluginDescriptors
> Task :expo-gradle-plugin:expo-autolinking-settings-plugin:pluginDescriptors
> Task :gradle-plugin:settings-plugin:processRes

--- a/mobile/gradle.properties
+++ b/mobile/gradle.properties
@@ -77,3 +77,33 @@ android.useDeprecatedNdk=false
 # Optimisations build universelles
 android.enableDexingArtifactTransform=true
 android.enableSeparateAnnotationProcessing=true
+
+# Configuration Gradle pour Termux + EAS Build
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.daemon=false
+
+# Configuration Android
+android.useAndroidX=true
+android.enableJetifier=true
+android.compileSdkVersion=33
+android.buildToolsVersion=34.0.0
+android.minSdkVersion=24
+android.targetSdkVersion=33
+
+# React Native
+react.native.precompileJSC=true
+react.native.enableHermes=false
+
+# Expo
+expo.useNewAssetSystem=true
+EAS_BUILD_RUNNER=eas-build
+
+# Optimisations natives
+android.enableR8.fullMode=false
+android.enableR8=true
+android.disableAutomaticComponentCreation=true
+
+# Désactiver CMake pour éviter les erreurs Hermes
+android.builder.sdkDownload=false
