--- a/mobile/app.json
+++ b/mobile/app.json
@@ -47,6 +47,7 @@
             "targetSdkVersion": 33,
             "compileSdkVersion": 33,
             "buildToolsVersion": "33.0.0",
+            "usesCleartextTraffic": true,
             "packagingOptions": {
               "pickFirst": [
                 "lib/x86/libc++_shared.so",
