--- a/mobile/eas.json
+++ b/mobile/eas.json
@@ -1,8 +1,7 @@
 {
   "cli": {
     "version": ">= 5.7.0",
-    "appVersionSource": "remote",
-    "requireCommit": false
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
